[package]
name = "don"
version = "0.1.0"
edition = "2021"
authors = [ "Jade <jade@witchof.space>" ]
description = "Utility to send discord messages (such as when a process completes)"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.1.8", features = ["cargo", "derive", "env"] }
hostname = "0.3.1"
serenity = { version = "0.11.5", default-features = false, features = ["model", "rustls_backend"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", default-features = false, features = ["macros"] }

[profile.release]
lto = true
